--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,16 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "es2015",
+    "jsx": "react",
+    "moduleResolution": "node",
     "lib": [
       "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+      "es5",
+      "es6"
+    ]
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
