--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
+  "resolutions": {
+    "web-encoding": "1.1.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
